<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txtViewBienvenida"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnQuito"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClima"
        android:textColor="@color/design_default_color_error" />

    <Button
        android:id="@+id/btnMoscu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnClima2"
        android:textColor="@color/design_default_color_error" />
</LinearLayout>